Include normalize in stylesheet and some bugfixes to homepage that were causing overflow.

--- a/statamic/_themes/mandl/css/mandl.css
+++ b/statamic/_themes/mandl/css/mandl.css
@@ -1,3 +1,4 @@
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 html {
@@ -229,7 +230,7 @@ a:active {
 }
 
 .offcut-uses {
-    margin: 1em;
+    padding: 1em;
 }
 
 .offcut-uses h3 {
@@ -423,7 +424,7 @@ address {
     }
 
     .hero-information {
-        margin-left: 10%;
+        margin: 0 auto;
         width: 60%;
     }
 
@@ -474,6 +475,7 @@ address {
     }
 
     .offcut-uses {
+        margin: 0 auto;
         max-width: 870px;
     }
 
@@ -493,7 +495,6 @@ address {
 
     .copyright {
         float: right;
-        font-style: italic;
         margin-top: 2em;
     }
 
@@ -535,11 +536,11 @@ address {
     }
 
     .hero-information {
-        left: 40%;
+        right: 0;
         position: absolute;
         padding: 5em 1em 3.7em;
         top: 0;
-        width: 60%;
+        width: 57%;
     }
 
     .hero-copy {
@@ -548,10 +549,6 @@ address {
 
     .hero-information .button-secondary {
         clear: both;
-    }
-
-    .offcut-uses {
-        margin: 0 auto;
     }
 
     .offcut-uses-list-item {
